<resources>
    <string name="app_name">Data Diri Plus</string>
    <string name="fill_edit_form">Fill/Edit Form</string>
    <string name="about">About</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="npm">NPM</string>
    <string name="input">Input</string>
    <string name="data_diri_mahasiswa">Data Diri Mahasiswa</string>
    <string name="hello_form">Hello, please fill the form.</string>
    <string name="back_to_home">Back to Home</string>
    <string name="biodata">BIODATA</string>
</resources>